<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_ku">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@color/Cornflower_Blue"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/Judul1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputNama1"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="52dp"
        android:autofillHints="username"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/hint_nama"
        android:importantForAutofill="yes"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Judul1"
        app:layout_constraintWidth_max="488dp" />

    <EditText
        android:id="@+id/inputNIM1"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:autofillHints="off"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/hint_NIM"
        android:importantForAutofill="yes"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputNama1"
        app:layout_constraintWidth_max="488dp" />

    <EditText
        android:id="@+id/inputEmail1"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="104dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/hint_email"
        android:importantForAutofill="yes"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputNama1"
        app:layout_constraintWidth_max="488dp" />

    <EditText
        android:id="@+id/inputPassword1"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="28dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/hint_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputEmail1"
        app:layout_constraintWidth_max="488dp" />

    <FrameLayout
        android:id="@+id/ivPasswordWrapper"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/toggle_password_visibility"
        app:layout_constraintEnd_toEndOf="@id/inputPassword1"
        app:layout_constraintTop_toTopOf="@id/inputPassword1"
        app:layout_constraintBottom_toBottomOf="@id/inputPassword1">

        <ImageView
            android:id="@+id/TogglePassword1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_visibility_of"
            android:importantForAccessibility="no"
            app:tint="@color/black"
            tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />
    </FrameLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="@color/Cornflower_Blue"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/daftar"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputPassword1"
        app:layout_constraintWidth_max="320dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
