<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_ku">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:contentDescription="@null"
        android:src="@color/Cornflower_Blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/Judul2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/inputNIM2"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:autofillHints="email"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/hint_NIM"
        android:importantForAutofill="yes"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Judul2" />

    <EditText
        android:id="@+id/inputPassword2"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/hint_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputNIM2" />

    <FrameLayout
        android:id="@+id/ivPasswordLoginWrapper"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/toggle_password_visibility"
        app:layout_constraintEnd_toEndOf="@id/inputPassword2"
        app:layout_constraintTop_toTopOf="@id/inputPassword2"
        app:layout_constraintBottom_toBottomOf="@id/inputPassword2">

        <ImageView
            android:id="@+id/TogglePassword2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_visibility_of"
            android:importantForAccessibility="no"
            app:tint="@color/black"
            tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />
    </FrameLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="@color/Cornflower_Blue"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/enter"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/inputPassword2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="320dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
